# managarm

./: Cargo.toml  meson.build
.github/workflows/: ci.yml
drivers/block/nvme/: meson.build
drivers/block/nvme/src/: apple.cpp  apple.hpp  controller.cpp  controller.hpp  main.cpp  queue.hpp
drivers/clocktracker/src/: main.cpp
drivers/libapple-rtkit/: meson.build
drivers/libapple-rtkit/include/apple/: rtkit.hpp
drivers/libapple-rtkit/src/: rtkit.cpp
drivers/libapple-sart/: meson.build
drivers/libapple-sart/include/apple/: sart.hpp
drivers/libapple-sart/src/: sart.cpp
drivers/libblockfs/src/: gpt.cpp
drivers/mailboxd/: Cargo.toml  mailboxd.yml  meson.build
drivers/mailboxd/include/mailboxd/: apple.hpp  mailbox.hpp
drivers/mailboxd/src/: apple.cpp  apple.rs  main.cpp  main.rs
hel/include/: hel.h
kernel/common/: render-text.hpp
kernel/common/x86/: machine.hpp
kernel/eir/arch/arm/: arch.cpp  load64.S  meson.build
kernel/eir/arch/arm/platform/apple/: apple.S  apple.cpp  link.x  meson.build  patch_eir.py
kernel/eir/arch/arm/platform/raspi4/: raspi4.cpp
kernel/eir/generic/: debug.cpp  framebuffer.cpp  main.cpp
kernel/eir/protos/limine/: entry.cpp  meson.build
kernel/eir/system/dtb/: discovery.cpp
kernel/klibc/eir/: interface.hpp
kernel/thor/arch/arm/: cpu.cpp  debug.cpp  gic.cpp  gic_v2.cpp  gic_v3.cpp  ints.cpp  meson.build  stubs.S  timer.cpp
kernel/thor/arch/arm/apple/: aic.cpp
kernel/thor/arch/arm/thor-internal/arch/: cpu-data.hpp  gic.hpp  gic_v2.hpp  gic_v3.hpp  irq-controller.hpp
kernel/thor/arch/riscv/: aplic.cpp
kernel/thor/arch/riscv/thor-internal/arch/: aplic.hpp
kernel/thor/arch/x86/: cpu.cpp  svm.cpp  vmx.cpp  vmx_stubs.S
kernel/thor/arch/x86/thor-internal/arch/: vmx.hpp
kernel/thor/generic/: main.cpp  servers.cpp  service.cpp
kernel/thor/generic/thor-internal/: module.hpp  virtualization.hpp
kernel/thor/system/dtb/: dtb_discover.cpp
kernel/thor/system/framebuffer/: fb.cpp
kernel/thor/system/framebuffer/thor-internal/framebuffer/: fb.hpp
kernel/thor/system/pci/: pci_dtb.cpp
posix/init/src/: stage1.cpp
posix/subsystem/: meson.build
posix/subsystem/src/: main.cpp  process.hpp
posix/subsystem/src/devices/: kvm.cpp  kvm.hpp
protocols/fs/: fs.bragi
protocols/hw/: hw.bragi  meson.build
protocols/hw/include/protocols/hw/: client.hpp
protocols/hw/src/: client.cpp
rust/hel/: Cargo.toml
rust/hel/src/: handle.rs  lib.rs
rust/hel/src/submission/: action.rs
rust/managarm/src/hw/: device.rs  error.rs  mod.rs
rust/managarm/src/mbus/: entity.rs
testsuites/virt-test/: main.cpp
tools/: gen-initrd.py
